<resources>
    <string name="app_name">UtilityNetApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="analysis_fragment">Analysis fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error!</string>
    <string name="error_msg">There is a technical issue. Please try again later.</string>
    <string name="need_to_access">We need to access</string>
    <string name="get_started">LETs GET STARTED</string>
    <string name="sms">SMS</string>
    <string name="sms_msg">To safely verify your phone number</string>
    <string name="location">Location</string>
    <string name="location_msg">To provide exclusive offers to you</string>
    <string name="contacts">CONTACTS</string>
    <string name="contacts_msg">To improve your app experience</string>
    <string name="storage">STORAGE</string>
    <string name="storage_msg">To easily and seamlessly access files</string>
    <string name="get_account">GET ACCOUNT</string>
    <string name="get_account_msg">To safely verify your email id.</string>
    <string name="camera">CAMERA</string>
    <string name="camera_msg">To easily and seamlessly capture images</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="t_labs_net">UtilityNet<font color="#183883"> App</font></string>
    <string name="tl_labs_net">UtilityNet<font color="#183883"> App</font></string>
    <string name="analysis">Analysis</string>
    <string name="a_network_analysis_android_app_using_cyme">Powered by Trident Tech Lab</string>
    <string name="network">Network</string>
    <string name="load_network">Load Network</string>
    <string name="section">Section ID</string>
    <string name="circuit_breaker">Circuit Breaker</string>
    <string name="phase">Phase</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="zone">Zone</string>
    <string name="breaker">Breaker</string>
    <string name="node">Node</string>
    <string name="cable">Cable</string>
    <string name="id">Id</string>
    <string name="number">Number</string>
    <string-array name="status">
        <item>Connected</item>
        <item>DisConnected</item>
    </string-array>
    <string name="reversible">Reversible</string>
    <string name="setting">Settings</string>
    <string name="state">State</string>
    <string name="meter_demand">Meter Demand</string>
    <string-array name="type">
        <item>kVA -PF</item>
        <item>Amp -PF</item>
        <item>kW -PF</item>
        <item>kW -kvar</item>
    </string-array>
    <string name="kw_kvar">KW-Kvar</string>
    <string name="connected">Connected</string>
    <string name="total">Total</string>
    <string name="shunt_capacitor">Shunt Capacitor</string>
    <string name="fixed">Fixed</string>
    <string name="rated_voltage">Rated Voltage</string>
    <string name="interrupting_rating">Interrupting Rating</string>
    <string name="configuration">Configuration</string>
    <string name="yg">YG</string>
    <string name="rated_power">Rated Power</string>
    <string name="losses">Losses</string>
    <string name="switched">Switch</string>
    <string name="spot_load">Spot Load</string>
    <string name="settings">Settings</string>
    <string name="load_model">Load Model</string>
    <string name="customer_type">Customer Type</string>
    <string name="year">Year</string>
    <string name="priority">Priority</string>
    <string name="normal">Normal</string>
    <string name="none">None</string>
    <string name="emergency">Emergency</string>
    <string name="load_allocation">Load Allocation</string>
    <string name="unlocked">UnLocked</string>
    <string-array name="format">
        <item>kW &amp; PF</item>
        <item>kVA &amp; PF</item>
        <item>kW &amp; kVAr</item>
    </string-array>
    <string name="kva_and_pf">KVA And PF</string>
    <string name="apparent_power">Apparent Power</string>
    <string name="power_factor">Power Factor</string>
    <string name="consumption">Consumption</string>
    <string name="connected_capacity">Connected Capacity</string>
    <string name="customers">Customers</string>
    <string name="sectionalizar_at_to_node">Sectionalizar- At To Node</string>
    <string name="normal_infeed">Normal Infeed</string>
    <string name="locked">Locked</string>
    <string name="actuating_current">Actuating Current</string>
    <string name="trip_settings">Trip Settings</string>
    <string name="counts_to_lockout">Counts to lockout</string>
    <string name="deadline_threshold">Deadline threshold</string>
    <string name="reset_time">Reset Time</string>
    <string-array name="defaults">
        <item>DEFAULT</item>
    </string-array>
    <string name="from_nodes">From Nodes</string>
    <string name="x">X</string>
    <string name="to_nodes">To Nodes</string>
    <string name="y">Y</string>
    <string name="coord_type">Coord Type</string>
    <string name="xy">XY</string>
    <string name="length">Length</string>
    <string name="setting_configuration">Setting Configuration</string>
    <string name="cable_id">Cable ID</string>
    <string name="nb_cables_phase">Nb Cables/Phase</string>
    <string name="operating_condition">Operating Condition</string>
    <string name="cond_temperature">Cond. Temperature</string>
    <string name="overview">Overview</string>
    <string name="cable_type">Cable Type</string>
    <string name="conductor_material">Conductor Material</string>
    <string name="conductor_size">Conductor Size</string>
    <string name="insulation_type">Insulation Type</string>
    <string name="length_id">Length Id</string>
    <string name="equivalent_impedances">Equivalent Impedances</string>
    <string name="positive_sequence">Positive Sequence</string>
    <string name="zero_sequence">Zero Sequence</string>
    <string name="line_id">Line Id</string>
    <string name="equivalent_impedances_z_abc">Equivalent Impedances ( Z[ABC] )</string>
    <string name="z_abc">Z[ABC] :-</string>
    <string name="equivalent_impedances_y_abc">Equivalent Impedances ( Y[ABC] )</string>
    <string name="y_abc">Y[ABC] :-</string>
    <string name="distribution_transformer">Transformer</string>
    <string name="transformer">Transformer</string>
    <string name="nodes">Nodes</string>
    <string name="fuse_atfrom_node">Fuse AtFromNode</string>
    <string name="two_winding_transformer_at_to_node">Two-Winding Transformer</string>
    <string name="general_settings">General Settings</string>
    <string name="primary">Primary</string>
    <string name="at_from_node">At From Node</string>
    <string name="fault_indicator">Fault indicator</string>
    <string name="de_energized_tap_changer">De-energized Tap changer</string>
    <string name="primary_tap">Primary Tap</string>
    <string name="secondary_tap">Secondary Tap</string>
    <string name="secondary">Secondary</string>
    <string name="kva">kVA</string>
    <string name="pf_percent">PF(%)</string>
    <string name="diversity">Diversity</string>
    <string name="cord_type">Cord Type</string>
    <string name="fuse">Fuse</string>
    <string name="spotload">SpotLoad</string>
    <string name="a_b_c">A B C</string>
    <string name="details">Details</string>
    <string name="unbalance">UnBalance</string>
    <string name="amacity">Amacity</string>
    <string name="hint_search_mess">Search here</string>
    <string name="tree_node">Tree Node</string>
    <string name="load_flow_analysis">Load Flow Analysis</string>
    <string name="convergence_parameters">Convergence Parameters</string>
    <string name="limit_categories">Limit Categories</string>
    <string name="equipment_ratings">Equipment Ratings</string>
    <string name="protective_device_ratings">Protective Device Ratings</string>
    <string name="parameter">Parameters</string>
    <string name="networks">Network</string>
    <string name="controls">Controls</string>
    <string name="loading_limits">Loading Limits</string>
    <string name="transformertapmode">Transformer Tap Operation</string>
    <string name="load_flow">Load Flow</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="run">Run</string>
    <string name="reports">Reports</string>
    <string name="input_data">Input Data</string>
    <string name="complete_report">Complete Report</string>
    <string name="regular_tab_operation">Regulator Tab Operation</string>
    <string name="iterations">Iterations</string>
    <string name="simulation_conditions">Simulation conditions</string>
    <string name="networkid">Network ID</string>
    <string name="more">More</string>
    <string name="section_properties">Section Properties</string>
    <string name="new_connection">New Connection</string>
    <string name="logout">Logout</string>
    <string name="expand">Expand All</string>
    <string name="breaker_type">Breaker Type</string>
    <string name="rated_current">Rated Current</string>
    <string name="userdefined">UserDefined</string>
    <string name="meter_id">Meter ID</string>
    <string name="nominal_rating">Nominal Rating</string>
    <string name="ampacity">Ampacity</string>
    <string name="ampear_capacity">Ampear Capacity</string>
    <string name="shortcircuit">ShortCircuit...</string>
    <string name="loadflow">LoadFlow...</string>
    <string name="load_allocations">Load Allocation...</string>
    <string name="calculation">Calculation</string>
    <string name="calculation_mode">Calculation Mode</string>
    <string name="fault_location">Fault Location</string>
    <string name="locations">Location :</string>
    <string name="at">At :</string>
    <string name="_1">50.0</string>
    <string name="of_conductor_length">% of Conductor Length</string>
    <string name="fault_type">Fault Type</string>
    <string name="types">Type :</string>
    <string name="add_section">Add Section</string>
    <string name="add_device">Add Device</string>
    <string name="meters">Meters</string>
    <string name="A">A</string>
    <string name="zero">0</string>
    <string name="customer_load">Customer Load</string>
    <string name="Load_model">Load Model</string>
    <string name="customers_number">Customer Number</string>
    <string name="Zero">0\n</string>
    <string name="Connected">Connected</string>
    <string name="customer_number">Customer Number</string>
    <string name="cust_type">Cust. Type</string>
    <string name="Locked">Locked</string>
    <string name="Status">Status</string>
    <string name="years">Year</string>
    <string name="Normal_priority">Normal Priority</string>
    <string name="Emerg_priority">Emerg Priority</string>
    <string name="Actual_kva">Actual kva</string>
    <string name="Actual_pf">Actual PF</string>
    <string name="Conn_kva">Conn kva</string>
    <string name="Kwh">Kwh</string>
    <string name="Cust">Cust.#</string>
    <string name="source">Source</string>
    <string name="Networks">NETWORK</string>
    <string name="sources">Source Type</string>
    <string name="source_node">Source Node</string>
    <string name="Name">Equipment ID</string>
    <string name="network_type">Network Type</string>
    <string name="proximitys">Proximity:</string>
    <string name="Network_grouping">Network Grouping:</string>
    <string name="area">Area "*"</string>
    <string name="openstreet_map">OpenStreet Map</string>
    <string name="no_map">No Map</string>
    <string name="google_map">Road Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="by_phase">By Phase</string>
    <string name="three_phase">Three Phase</string>
    <string name="switching_and_protective_devces">Switching and Protective Devices</string>
</resources>