<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/table_heading_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Cnumber"
                        android:layout_width="150dp"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/customer_number"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/CType"
                        android:layout_width="160dp"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/cust_type"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="160dp"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/Status"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Phase"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/phase"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/actual_kva"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/Actual_kva"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/actual_pf"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/Actual_kva"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/connected_kva"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/Conn_kva"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/kwh"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/Conn_kva"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/customer"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:background="@drawable/table_content_cell_bg"
                        android:text="@string/Cust"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

        </HorizontalScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>